Splitting the validation result models from the main package

--- a/src/YuckQi.Domain.Validation/YuckQi.Domain.Validation.csproj
+++ b/src/YuckQi.Domain.Validation/YuckQi.Domain.Validation.csproj
@@ -4,7 +4,6 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Kevin J Lambert</Authors>
-    <Company />
     <Version>0.2.0</Version>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
@@ -14,6 +13,10 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="9.3.0" />
   </ItemGroup>
 
 </Project>
