--- a/src/YuckQi.Domain.Services/YuckQi.Domain.Services.csproj
+++ b/src/YuckQi.Domain.Services/YuckQi.Domain.Services.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Kevin J Lambert</Authors>
-    <Version>1.3.0</Version>
+    <Version>6.0.0</Version>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <Description>A .NET library for bootstrapping a domain services project.</Description>
   </PropertyGroup>
